--- a/package.json
+++ b/package.json
@@ -26,8 +26,16 @@
   "homepage": "https://github.com/rfviolato/ng-pg-select",
   "devDependencies": {
     "angular": "^1.3.15",
+    "connect-livereload": "^0.5.3",
+    "express": "^4.12.4",
     "gulp": "^3.8.11",
-    "gulp-uglify": "^1.2.0"
+    "gulp-autoprefixer": "^2.3.0",
+    "gulp-minify-css": "^1.1.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.0.1",
+    "gulp-uglify": "^1.2.0",
+    "gulp-watch": "^4.2.4",
+    "tiny-lr": "^0.1.5"
   },
   "ignore": [
     "node_modules",
