--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "pg-ng-select",
+  "name": "pg-ng-dropdown",
   "version": "1.0.0",
-  "description": "Pagar.me directive for dropdown functionality",
+  "description": "Pagar.me directive to provide a simple and quick dropdown from a provided array of options",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/rfviolato/ng-pg-select.git"
+    "url": "https://github.com/pagarme/pg-ng-dropdown.git"
   },
   "keywords": [
     "pg-ng-dropdown",
@@ -21,9 +21,9 @@
   "author": "Rafael Violato",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/rfviolato/ng-pg-select/issues"
+    "url": "https://github.com/pagarme/pg-ng-dropdown/issues"
   },
-  "homepage": "https://github.com/rfviolato/ng-pg-select",
+  "homepage": "https://github.com/pagarme/pg-ng-dropdown",
   "devDependencies": {
     "angular": "^1.3.15",
     "connect-livereload": "^0.5.3",
