--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,9 @@
     "node_modules",
     "bower_components",
     "test",
+    "index.html",
+    "gulpfile.js",
+    "package.json",
     "tests",
     "public"
   ]
