--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "pg-ng-select",
-  "version": "1.0.2",
+  "name": "pg-ng-dropdown",
+  "version": "1.1.0",
   "homepage": "https://github.com/pagarme/pg-ng-dropdown",
   "authors": [
     "Rafael Violato <rafael.violato@pagar.me>"
